language/move-lang/tests/move_check/naming/friend_decl_out_of_account_addr.move
address 0x2 {
module M {}
}

address 0x3 {
module M {
    friend 0x2::M;
}
}
